# lib_Clever_Elsie

./: .gitignore  LICENSE  Makefile  README.md
.manager/: Makefile  config.json
DP/: LCS.cpp  LIS.cpp  edit_distance.cpp
FRAC/: frac.hpp
Graph/: LCA.cpp  bellmanford.cpp  diameter.cpp  dijkstra.cpp  max_flow.cpp  unionfind.cpp  warshallfloyd.cpp
Math/: gcd_lcm.cpp  power.cpp
Matrix/: MatrixPower.cpp
String/: kmp.cpp  rollingHash.cpp
Tree/: atcoder_lazy_segtree.cpp  segtree.cpp  trie.cpp
code/: huffman.hpp
convolution/: FFT_NTT.md
data_structure/: atcoder_lazy_segtree.cpp  union_find.cpp
dp/: LCS.cpp  LCS.hpp  LIS.cpp  edit_distance.cpp  inv_num.hpp
dtStrc/: BIT.cpp  BIT_seg.hpp  BIT_seg_lazyseg.cpp  BIT_segtree.cpp  bucket.hpp  frac.hpp  hash_map.hpp  holder.hpp  lazy_seg.hpp  lazy_seg_snip.cpp  lazy_segtree.cpp  math.hpp  merge_sort_tree.cpp  merge_sort_tree.hpp  mex.cpp  mex.hpp  null_t.hpp  queue.hpp  range_frequency.cpp  range_frequency.hpp  range_tree.hpp  segtree.cpp  segtree.hpp  std_has.cpp  svector.hpp  tree.hpp  trie.cpp  trie.hpp  unionFind.cpp  unionFind.hpp  union_find.cpp  wavelet.hpp
geometry/: convexHull.hpp  convexHull_monotone_chain.cpp  rotate.cpp  rotate.hpp
graph/: DAGsort.cpp  DAGsort.hpp  LCA.cpp  LCA.hpp  MST.cpp  MST.hpp  detect_cycle.cpp  detect_cycle.hpp  diameter.cpp  diameter.hpp  dijkstra.cpp  max_flow.hpp  mcmf.hpp  scc.cpp  scc.hpp  shortestPath.cpp  shortestPath.hpp
manip/: rotate.cpp
math/: basic_math.hpp  combination.cpp  combination.hpp  (+20 more)
test/test/: CMakeLists.txt  Makefile
test/test/src/: main.cpp
(+138 files in other folders)
